fix overflow

--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,6 @@
   color: #000;
 }
 
-.row{
+.row.fix-row{
   --bs-gutter-x: 0;
 }
